# PeerAI

./: Anchor.toml  Cargo.toml  package.json
.github/workflows/: release.yml
crates/common/src/: config.rs  types.rs
crates/inference/: Cargo.toml
crates/inference/src/: bid.rs  lib.rs  ollama.rs  scheduler.rs
crates/node/: Cargo.toml
crates/node/src/: api.rs  cli.rs  daemon.rs  health.rs  main.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: behaviour.rs  lib.rs  service.rs  topics.rs
crates/p2p/tests/: gossipsub_minimal.rs  two_node_discovery.rs
crates/reputation/src/: gossip.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: channel.rs  evm.rs  lib.rs  solana.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  local.rs  memory.rs  walrus.rs
deploy/: install.sh
docs/: architecture.md  config.example.toml
landing-page/: tailwind.config.ts
landing-page/app/: globals.css  layout.tsx  page.tsx
landing-page/app/hooks/: useCardEffects.ts  useCounters.ts  useFloatingLabels.ts  useFlowLines.ts  useHeroGradient.ts  useModelTabs.ts  useRevealOnScroll.ts  useScrollProgress.ts  useTicker.ts  useWordReveal.ts
tests/: pinaivu.ts
