[package]
name = "p2p"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }

[dependencies]
common          = { path = "../common" }
async-trait     = { workspace = true }
anyhow          = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
futures         = { workspace = true }
libp2p = { version = "0.54", features = [
  "kad", "gossipsub", "noise", "yamux", "tcp", "quic",
  "identify", "ping", "mdns", "autonat",
  "macros", "tokio",
]}
