[package]
name = "settlement"
version = "0.1.0"
edition = "2021"

[features]
# Enable with: cargo build -p settlement --features solana
# The node crate should add settlement = { ..., features = ["solana"] } to use it.
solana = ["dep:solana-sdk", "dep:solana-client"]

[dependencies]
common      = { path = "../common" }
async-trait = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }
reqwest     = { workspace = true }
k256        = { workspace = true }
sha3        = { workspace = true }
ed25519-dalek = { workspace = true }
uuid        = { workspace = true }

# Solana SDK — only compiled when the "solana" feature is enabled.
solana-sdk    = { version = "1.18", optional = true }
solana-client = { version = "1.18", optional = true }

[dev-dependencies]
tokio         = { workspace = true, features = ["full"] }
rand          = { workspace = true }
ed25519-dalek = { workspace = true }
