[package]
name = "settlement"
version = "0.1.0"
edition = "2021"

[features]
# Solana deps conflict with zeroize version requirements from other workspace crates.
# To re-enable: restore solana-sdk/solana-client below, change this back, and resolve deps.
solana = []

[dependencies]
common      = { path = "../common" }
async-trait = { workspace = true }
anyhow      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }
reqwest     = { workspace = true }
k256        = { workspace = true }
sha3        = { workspace = true }
ed25519-dalek = { workspace = true }
uuid        = { workspace = true }

# Solana SDK deps removed from optional — zeroize version conflict with workspace.
# curve25519-dalek v3 (solana 1.18) needs zeroize < 1.4, but workspace needs zeroize 1.8.
# Re-add when solana-sdk upgrades to curve25519-dalek v4 (expected ~solana 2.x).

[dev-dependencies]
tokio         = { workspace = true, features = ["full"] }
rand          = { workspace = true }
ed25519-dalek = { workspace = true }
